--- a/proses/index.html
+++ b/proses/index.html
@@ -315,7 +315,15 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 <li id="menu-item-1445" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1445"><a href="../hubungi-kami/index.html">Hubungi Kami</a></li>
 <li id="menu-item-1447" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1447"><a href="../check-sertifikat/index.html">Check Sertifikat</a></li>
 <li id="menu-item-1448" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1448"><a href="../form-pemesanan/index.html"><span class="nnColorfulPostColor" style="color:#ffffff">Form Pemesanan</span></a></li>
-<li id="menu-item-1451" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1451"><a href="../category/blog/index.html">Blog</a></li>
+<li id="menu-item-1451" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1451">
+<a href="../category/blog/index.html">Blog</a>
+</li>
+<li id="menu-item-1451" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1451">
+<a href="https://sertifikasi.co.id">Sertifikasi.co.id</a>
+</li>
+<li id="menu-item-1451" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1451">
+<a href="https://tenderind.com">Tenderind.com</a>
+</li>
 </ul></div>      
         </div>
     	<div class="right">
