--- a/202-ahli-teknik-jalan/feed/index.html
+++ b/202-ahli-teknik-jalan/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 202 Ahli Teknik Jalan</title>
+	<title>Sertifikat Keahlian Comments on: 202 Ahli Teknik Jalan</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/202-ahli-teknik-jalan/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/202-ahli-teknik-jalan/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
@@ -15,7 +15,7 @@
 	<sy:updateFrequency>1</sy:updateFrequency>
 	<generator>https://wordpress.org/?v=4.6.16</generator>
 	<item>
-		<title>By: xxx553.top</title>
+		<title>Sertifikat Keahlian By: xxx553.top</title>
 		<link>http://sertifikat-keahlian.github.io/202-ahli-teknik-jalan/#comment-94</link>
 		<dc:creator><![CDATA[xxx553.top]]></dc:creator>
 		<pubDate>Sat, 25 May 2019 12:21:42 +0000</pubDate>
@@ -28,7 +28,7 @@ xxx553.top TOP]]></description>
 ]]></content:encoded>
 	</item>
 	<item>
-		<title>By: sex655.xyz</title>
+		<title>Sertifikat Keahlian By: sex655.xyz</title>
 		<link>http://sertifikat-keahlian.github.io/202-ahli-teknik-jalan/#comment-93</link>
 		<dc:creator><![CDATA[sex655.xyz]]></dc:creator>
 		<pubDate>Fri, 24 May 2019 13:50:25 +0000</pubDate>
@@ -41,7 +41,7 @@ sex655.xyz TOP]]></description>
 ]]></content:encoded>
 	</item>
 	<item>
-		<title>By: xxx633.top</title>
+		<title>Sertifikat Keahlian By: xxx633.top</title>
 		<link>http://sertifikat-keahlian.github.io/202-ahli-teknik-jalan/#comment-92</link>
 		<dc:creator><![CDATA[xxx633.top]]></dc:creator>
 		<pubDate>Wed, 22 May 2019 18:44:19 +0000</pubDate>
@@ -54,7 +54,7 @@ xxx633.top TOP]]></description>
 ]]></content:encoded>
 	</item>
 	<item>
-		<title>By: xxx656.top</title>
+		<title>Sertifikat Keahlian By: xxx656.top</title>
 		<link>http://sertifikat-keahlian.github.io/202-ahli-teknik-jalan/#comment-91</link>
 		<dc:creator><![CDATA[xxx656.top]]></dc:creator>
 		<pubDate>Tue, 21 May 2019 21:26:57 +0000</pubDate>
@@ -67,7 +67,7 @@ xxx656.top TOP]]></description>
 ]]></content:encoded>
 	</item>
 	<item>
-		<title>By: xxx636.top</title>
+		<title>Sertifikat Keahlian By: xxx636.top</title>
 		<link>http://sertifikat-keahlian.github.io/202-ahli-teknik-jalan/#comment-90</link>
 		<dc:creator><![CDATA[xxx636.top]]></dc:creator>
 		<pubDate>Tue, 21 May 2019 00:29:27 +0000</pubDate>
@@ -80,7 +80,7 @@ xxx636.top TOP]]></description>
 ]]></content:encoded>
 	</item>
 	<item>
-		<title>By: xxx636.xyz</title>
+		<title>Sertifikat Keahlian By: xxx636.xyz</title>
 		<link>http://sertifikat-keahlian.github.io/202-ahli-teknik-jalan/#comment-89</link>
 		<dc:creator><![CDATA[xxx636.xyz]]></dc:creator>
 		<pubDate>Mon, 20 May 2019 03:58:02 +0000</pubDate>
@@ -93,7 +93,7 @@ xxx636.xyz TOP]]></description>
 ]]></content:encoded>
 	</item>
 	<item>
-		<title>By: xxx565.xyz</title>
+		<title>Sertifikat Keahlian By: xxx565.xyz</title>
 		<link>http://sertifikat-keahlian.github.io/202-ahli-teknik-jalan/#comment-88</link>
 		<dc:creator><![CDATA[xxx565.xyz]]></dc:creator>
 		<pubDate>Sun, 19 May 2019 08:15:56 +0000</pubDate>
@@ -106,7 +106,7 @@ xxx565.xyz TOP]]></description>
 ]]></content:encoded>
 	</item>
 	<item>
-		<title>By: xxx665.xyz</title>
+		<title>Sertifikat Keahlian By: xxx665.xyz</title>
 		<link>http://sertifikat-keahlian.github.io/202-ahli-teknik-jalan/#comment-87</link>
 		<dc:creator><![CDATA[xxx665.xyz]]></dc:creator>
 		<pubDate>Sat, 18 May 2019 12:07:56 +0000</pubDate>
@@ -119,7 +119,7 @@ xxx665.xyz TOP]]></description>
 ]]></content:encoded>
 	</item>
 	<item>
-		<title>By: xxx355.xyz</title>
+		<title>Sertifikat Keahlian By: xxx355.xyz</title>
 		<link>http://sertifikat-keahlian.github.io/202-ahli-teknik-jalan/#comment-86</link>
 		<dc:creator><![CDATA[xxx355.xyz]]></dc:creator>
 		<pubDate>Fri, 17 May 2019 15:26:03 +0000</pubDate>
@@ -132,7 +132,7 @@ xxx355.xyz TOP]]></description>
 ]]></content:encoded>
 	</item>
 	<item>
-		<title>By: sex335.xyz</title>
+		<title>Sertifikat Keahlian By: sex335.xyz</title>
 		<link>http://sertifikat-keahlian.github.io/202-ahli-teknik-jalan/#comment-85</link>
 		<dc:creator><![CDATA[sex335.xyz]]></dc:creator>
 		<pubDate>Thu, 16 May 2019 19:05:52 +0000</pubDate>
