--- a/205-ahli-teknik-terowongan/feed/index.html
+++ b/205-ahli-teknik-terowongan/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 205 Ahli Teknik Terowongan</title>
+	<title>Sertifikat Keahlian Comments on: 205 Ahli Teknik Terowongan</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/205-ahli-teknik-terowongan/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/205-ahli-teknik-terowongan/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
