--- a/211-ahli-sumber-daya-air/feed/index.html
+++ b/211-ahli-sumber-daya-air/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 211 Ahli Sumber Daya Air</title>
+	<title>Sertifikat Keahlian Comments on: 211 Ahli Sumber Daya Air</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/211-ahli-sumber-daya-air/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/211-ahli-sumber-daya-air/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
@@ -15,7 +15,7 @@
 	<sy:updateFrequency>1</sy:updateFrequency>
 	<generator>https://wordpress.org/?v=4.6.16</generator>
 	<item>
-		<title>By: Yanpiet B. Worisio</title>
+		<title>Sertifikat Keahlian By: Yanpiet B. Worisio</title>
 		<link>http://sertifikat-keahlian.github.io/211-ahli-sumber-daya-air/#comment-8</link>
 		<dc:creator><![CDATA[Yanpiet B. Worisio]]></dc:creator>
 		<pubDate>Mon, 05 Feb 2018 14:11:38 +0000</pubDate>
@@ -31,7 +31,7 @@ Apakah saya dapat mengajukan diri untuk SKA Teknik sumberdaya Air?</p>
 ]]></content:encoded>
 	</item>
 	<item>
-		<title>By: Zulkarnaini</title>
+		<title>Sertifikat Keahlian By: Zulkarnaini</title>
 		<link>http://sertifikat-keahlian.github.io/211-ahli-sumber-daya-air/#comment-5</link>
 		<dc:creator><![CDATA[Zulkarnaini]]></dc:creator>
 		<pubDate>Sun, 25 Jun 2017 17:51:49 +0000</pubDate>
