--- a/303-ahli-teknik-plambing-dan-pompa-mekanik/feed/index.html
+++ b/303-ahli-teknik-plambing-dan-pompa-mekanik/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 303 Ahli Teknik Plambing dan Pompa Mekanik</title>
+	<title>Sertifikat Keahlian Comments on: 303 Ahli Teknik Plambing dan Pompa Mekanik</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/303-ahli-teknik-plambing-dan-pompa-mekanik/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/303-ahli-teknik-plambing-dan-pompa-mekanik/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
