--- a/503-ahli-teknik-sanitasi-dan-limbah/feed/index.html
+++ b/503-ahli-teknik-sanitasi-dan-limbah/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 503 Ahli Teknik Sanitasi dan Limbah</title>
+	<title>Sertifikat Keahlian Comments on: 503 Ahli Teknik Sanitasi dan Limbah</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/503-ahli-teknik-sanitasi-dan-limbah/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/503-ahli-teknik-sanitasi-dan-limbah/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
