--- a/601-ahli-manajemen-konstruksi/feed/index.html
+++ b/601-ahli-manajemen-konstruksi/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 601 Ahli Manajemen Konstruksi</title>
+	<title>Sertifikat Keahlian Comments on: 601 Ahli Manajemen Konstruksi</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/601-ahli-manajemen-konstruksi/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/601-ahli-manajemen-konstruksi/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
