--- a/602-ahli-manajemen-proyek/feed/index.html
+++ b/602-ahli-manajemen-proyek/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 602 Ahli Manajemen Proyek</title>
+	<title>Sertifikat Keahlian Comments on: 602 Ahli Manajemen Proyek</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/602-ahli-manajemen-proyek/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/602-ahli-manajemen-proyek/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
