--- a/201-ahli-teknik-bangunan-gedung/feed/index.html
+++ b/201-ahli-teknik-bangunan-gedung/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 201 Ahli Teknik Bangunan Gedung</title>
+	<title>Sertifikat Keahlian Comments on: 201 Ahli Teknik Bangunan Gedung</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/201-ahli-teknik-bangunan-gedung/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/201-ahli-teknik-bangunan-gedung/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
