--- a/206-ahli-teknik-landasan-terbang/feed/index.html
+++ b/206-ahli-teknik-landasan-terbang/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 206 Ahli Teknik Landasan Terbang</title>
+	<title>Sertifikat Keahlian Comments on: 206 Ahli Teknik Landasan Terbang</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/206-ahli-teknik-landasan-terbang/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/206-ahli-teknik-landasan-terbang/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
