--- a/208-ahli-teknik-dermaga/feed/index.html
+++ b/208-ahli-teknik-dermaga/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 208 Ahli Teknik Dermaga</title>
+	<title>Sertifikat Keahlian Comments on: 208 Ahli Teknik Dermaga</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/208-ahli-teknik-dermaga/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/208-ahli-teknik-dermaga/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
