--- a/216-ahli-geoteknik/feed/index.html
+++ b/216-ahli-geoteknik/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 216 Ahli Geoteknik</title>
+	<title>Sertifikat Keahlian Comments on: 216 Ahli Geoteknik</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/216-ahli-geoteknik/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/216-ahli-geoteknik/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
