--- a/217-ahli-geodesi/feed/index.html
+++ b/217-ahli-geodesi/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 217 Ahli Geodesi</title>
+	<title>Sertifikat Keahlian Comments on: 217 Ahli Geodesi</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/217-ahli-geodesi/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/217-ahli-geodesi/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
