--- a/301-ahli-teknik-mekanikal/feed/index.html
+++ b/301-ahli-teknik-mekanikal/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 301 Ahli Teknik Mekanikal</title>
+	<title>Sertifikat Keahlian Comments on: 301 Ahli Teknik Mekanikal</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/301-ahli-teknik-mekanikal/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/301-ahli-teknik-mekanikal/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
