--- a/302-ahli-teknik-sistem-tata-udara-dan-refigerasi/feed/index.html
+++ b/302-ahli-teknik-sistem-tata-udara-dan-refigerasi/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 302 Ahli Teknik Sistem Tata Udara dan Refigerasi</title>
+	<title>Sertifikat Keahlian Comments on: 302 Ahli Teknik Sistem Tata Udara dan Refigerasi</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/302-ahli-teknik-sistem-tata-udara-dan-refigerasi/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/302-ahli-teknik-sistem-tata-udara-dan-refigerasi/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
