--- a/304-ahli-teknik-proteksi-kebakaran/feed/index.html
+++ b/304-ahli-teknik-proteksi-kebakaran/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 304 Ahli Teknik Proteksi Kebakaran</title>
+	<title>Sertifikat Keahlian Comments on: 304 Ahli Teknik Proteksi Kebakaran</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/304-ahli-teknik-proteksi-kebakaran/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/304-ahli-teknik-proteksi-kebakaran/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
