--- a/305-ahli-teknik-transportasi-dalam-gedung/feed/index.html
+++ b/305-ahli-teknik-transportasi-dalam-gedung/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 305 Ahli Teknik Transportasi Dalam Gedung</title>
+	<title>Sertifikat Keahlian Comments on: 305 Ahli Teknik Transportasi Dalam Gedung</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/305-ahli-teknik-transportasi-dalam-gedung/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/305-ahli-teknik-transportasi-dalam-gedung/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
