--- a/305-ahli-teknik-transportasi-dalam-gedung/index.html
+++ b/305-ahli-teknik-transportasi-dalam-gedung/index.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="http://gmpg.org/xfn/11">
 <link rel="pingback" href="../xmlrpc.php">
-<title>305 Ahli Teknik Transportasi Dalam Gedung &#8211; Jasa Pembuatan SKA SKT ISO SBU SIUJK SMK3</title>
+<title>Sertifikat Keahlian 305 Ahli Teknik Transportasi Dalam Gedung &#8211; Jasa Pembuatan SKA SKT ISO SBU SIUJK SMK3</title>
 <!-- Jetpack Site Verification Tags -->
 <meta name="google-site-verification" content="oCr_mHUMOnYKWvu3BzFHQVs-Be3O7Hy1sWnLHhYmPUE" />
 <link rel='dns-prefetch' href='http://s0.wp.com/' />
