--- a/401-ahli-teknik-tenaga-listrik/feed/index.html
+++ b/401-ahli-teknik-tenaga-listrik/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 401 Ahli Teknik Tenaga Listrik</title>
+	<title>Sertifikat Keahlian Comments on: 401 Ahli Teknik Tenaga Listrik</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/401-ahli-teknik-tenaga-listrik/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/401-ahli-teknik-tenaga-listrik/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
