--- a/405-ahli-teknik-elektronika-dan-telekomunikasi-dalam-gedung/feed/index.html
+++ b/405-ahli-teknik-elektronika-dan-telekomunikasi-dalam-gedung/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 405 Ahli Teknik Elektronika dan Telekomunikasi dalam Gedung</title>
+	<title>Sertifikat Keahlian Comments on: 405 Ahli Teknik Elektronika dan Telekomunikasi dalam Gedung</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/405-ahli-teknik-elektronika-dan-telekomunikasi-dalam-gedung/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/405-ahli-teknik-elektronika-dan-telekomunikasi-dalam-gedung/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
