--- a/502-ahli-perencanaan-wilayah-dan-kota/feed/index.html
+++ b/502-ahli-perencanaan-wilayah-dan-kota/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 502 Ahli Perencanaan Wilayah dan Kota</title>
+	<title>Sertifikat Keahlian Comments on: 502 Ahli Perencanaan Wilayah dan Kota</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/502-ahli-perencanaan-wilayah-dan-kota/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/502-ahli-perencanaan-wilayah-dan-kota/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
