--- a/504-ahli-teknik-air-minum/feed/index.html
+++ b/504-ahli-teknik-air-minum/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 504 Ahli Teknik Air Minum</title>
+	<title>Sertifikat Keahlian Comments on: 504 Ahli Teknik Air Minum</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/504-ahli-teknik-air-minum/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/504-ahli-teknik-air-minum/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
