--- a/603-ahli-k3-konstruksi/feed/index.html
+++ b/603-ahli-k3-konstruksi/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 603 Ahli K3 Konstruksi</title>
+	<title>Sertifikat Keahlian Comments on: 603 Ahli K3 Konstruksi</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/603-ahli-k3-konstruksi/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/603-ahli-k3-konstruksi/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
