--- a/604-ahli-sistem-manajemen-mutu/feed/index.html
+++ b/604-ahli-sistem-manajemen-mutu/feed/index.html
@@ -6,7 +6,7 @@
 	
 	>
 <channel>
-	<title>Comments on: 604 Ahli Sistem Manajemen Mutu</title>
+	<title>Sertifikat Keahlian Comments on: 604 Ahli Sistem Manajemen Mutu</title>
 	<atom:link href="http://sertifikat-keahlian.github.io/604-ahli-sistem-manajemen-mutu/feed/" rel="self" type="application/rss+xml" />
 	<link>http://sertifikat-keahlian.github.io/604-ahli-sistem-manajemen-mutu/</link>
 	<description>Mudah. Murah. Cepat. Resmi. Terpercaya</description>
